feat: audit info
